# tnc

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  run.nu
etl-unit/: .rust-analyzer.json  .rustfmt.toml  Cargo.toml  partition_strategy.md
etl-unit-gen/: Cargo.toml
etl-unit-gen/src/: distribution.rs  generate.rs  lib.rs  schema.rs  spec.rs
etl-unit/src/: aggregation.rs  binder.rs  chart_hints.rs  column.rs  component_filter.rs  composition.rs  error.rs  expr.rs  lib.rs  signal_policy.rs  source.rs  subject.rs  time_range.rs  unit_ref.rs  unpivot.rs
etl-unit/src/interval/: aggregate.rs  mod.rs  planner.rs
etl-unit/src/pipeline/: mod.rs  phases.rs  plan.rs
etl-unit/src/plan/: bindings.rs  build.rs  builder.rs  core.rs  crush.rs  filter.rs  join.rs  mod.rs  processing_plan.rs  runtime.rs  source_context.rs
etl-unit/src/polars_fns/: mod.rs  over_subject_fn.rs  over_time_fn.rs  pointwise_fn.rs
etl-unit/src/polars_fns/signal_policy/: instant_policy_fn.rs  meta.rs  mod.rs  sliding_policy_fn.rs  time_range.rs  tumbling_policy_fn.rs  validation.rs
etl-unit/src/request/: aggregation.rs  interval.rs  mod.rs  subset_request.rs
etl-unit/src/schema/: builder.rs  convert.rs  dto.rs  mod.rs
etl-unit/src/subset/: meta.rs  mod.rs  stages.rs  subset_executor.rs
etl-unit/src/unit/: derivation.rs  measurement.rs  mod.rs  null_value.rs  quality.rs
etl-unit/src/universe/: alignment.rs  assembly.rs  derivation.rs  extraction.rs  fragment.rs  info.rs  measurement_storage.rs  mod.rs  universe_of_etlunits.rs
etl-unit/tests/: group_by_dynamic_api.rs  group_by_dynamic_synthetic.rs  instant_signal_policy_test.rs  integration_test.rs  raw_vs_processed_semantics.rs  report_interval_test.rs  witness_binary_test.rs
etl-unit/tests/common/: mod.rs
etl-unit/tests/fixtures/: pump_data_sample.csv  pump_telemetry_schema.json  subset_request.json
meta-tracing/: Cargo.toml
meta-tracing/src/: lib.rs
propensity-score/: Cargo.toml
propensity-score/src/: binning.rs  config.rs  lib.rs  logistic.rs
tnc-analysis/: Cargo.toml
tnc-analysis/src/: ancova.rs  config.rs  lib.rs  matching.rs  output.rs  pipeline.rs  propensity.rs  treatment.rs  universe.rs  validation.rs  windows.rs
tnc-charts/: index.html  package-lock.json  package.json
tnc-charts/src/: App.jsx
tnc-charts/src/charts/: GroupedBarChart.jsx  Heatmap.jsx  Histogram.jsx  HorizontalBarChart.jsx  LineChart.jsx  PipelineFlow.jsx  StatCard.jsx  index.js
tnc-charts/src/components/: ConfigViewer.jsx  FileViewer.jsx
tnc-charts/src/data/: loadCsvData.js  loader.js
tnc-charts/src/util/: deciles.js
tnc-charts/src/views/: AssignmentView.jsx  ComparisonView.jsx  MatchingView.jsx  OverviewView.jsx  PropensityView.jsx  ResultsView.jsx  UniverseView.jsx
tnc-data-gen/: Cargo.toml  campaign-cfg.toml  config.json.old  config.toml  etl-schema.toml  tnc-analysis-cfg.toml
tnc-data-gen/src/: main.rs  synth.rs
tnc-data-gen/src.old/: config.rs  generator.rs  main.rs
