[package]
name = "etl-unit"
version = "0.1.0"
edition = "2024"
description = "Semantic data model for ETL units - qualities and measurements over subjects and time"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"
humantime-serde = "1.1"
memuse = "0.2"
serde_path_to_error = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
polars = { version = "0.51", features = [
    "abs",
    "asof_join",
    "concat_str",
    "cum_agg",
    "diff",
    "dynamic_group_by",
    "dtype-datetime",
    "dtype-struct",
    "interpolate",
    "is_in",
    "lazy",
    "pivot",
    "rank",
    "rolling_window",
    "round_series",
    "strings",
    "temporal",
    "timezones",
] }

# local dependencies
meta-tracing = { path = "../meta-tracing" }

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serial_test = "3.2.0"


# END
